data/forge_javadoc/1.7.10/raw/net/minecraft/entity/EntityAgeable (2).md
---
title: "EntityAgeable"
description: "public abstract class EntityAgeable extends EntityCreature"
package: "net/minecraft/entity"
version: "1.7.10"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/entity/EntityAgeable.html"
sourceType: javadoc
---

# EntityAgeable

## Class signature

```java
public abstract class EntityAgeable extends EntityCreature
```

## Constructors

- `public EntityAgeable( World p_i1578_1_)`

## Methods

- `public abstract EntityAgeable createChild( EntityAgeable p_90011_1_)`
- `public boolean interact( EntityPlayer p_70085_1_)`
- `protected void entityInit()`
- `public int getGrowingAge()`
- `public void addGrowth(int p_110195_1_)`
- `public void setGrowingAge(int p_70873_1_)`
- `public void writeEntityToNBT( NBTTagCompound p_70014_1_)`
- `public void readEntityFromNBT( NBTTagCompound p_70037_1_)`
- `public void onLivingUpdate()`
- `public boolean isChild()`
- `public void setScaleForAge(boolean p_98054_1_)`
- `protected final void setSize(float p_70105_1_, float p_70105_2_)`
- `protected final void setScale(float p_98055_1_)`
